[package]
name = "lightning-block-sync"
version = "0.2.0"
authors = ["Jeffrey Czyz", "Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/rust-lightning"
description = """
Utilities to fetch the chain data from a block source and feed them into Rust Lightning.
"""
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [ "rpc-client", "rest-client" ]
rest-client = [ "serde_json", "chunked_transfer" ]
rpc-client = [ "serde_json", "chunked_transfer" ]

[dependencies]
bitcoin = "0.30.2"
hex = { package = "hex-conservative", version = "0.1.1", default-features = false }
lightning = { version = "0.2.0", path = "../lightning" }
tokio = { version = "1.35", features = [ "io-util", "net", "time", "rt" ], optional = true }
serde_json = { version = "1.0", optional = true }
chunked_transfer = { version = "1.4", optional = true }
yuv-pixels = { git = "https://github.com/akitamiabtc/yuv.git", tag = "v0.3.2", default-features = false, features = ["std"] }
yuv-types = { git = "https://github.com/akitamiabtc/yuv.git", tag = "v0.3.2", default-features = false, features = ["std"] }
yuv-rpc-api = { git = "https://github.com/akitamiabtc/yuv.git", tag = "v0.3.2", default-features = false }

[dev-dependencies]
lightning = { version = "0.2.0", path = "../lightning", features = ["_test_utils"] }
tokio = { version = "1.35", features = [ "macros", "rt" ] }
